--- a/task10orm/pom.xml
+++ b/task10orm/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>h2</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
