--- a/task11hibernate/pom.xml
+++ b/task11hibernate/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
