--- a/task14war/pom.xml
+++ b/task14war/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.10</maven.compiler.source>
-        <maven.compiler.target>1.10</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
@@ -62,7 +62,7 @@
     </dependencies>
 
     <build>
-        <finalName>L13.1.2-war</finalName>
+        <finalName>task14war</finalName>
 
         <plugins>
             <plugin>
@@ -71,7 +71,7 @@
                     <webXml>src/main/resources/WEB-INF/web.xml</webXml>
                     <webResources>
                         <resource>
-                            <directory>public_html</directory>
+                            <directory>src/main/java/ru/otus/hw14war/html</directory>
                         </resource>
                     </webResources>
                 </configuration>
