--- a/task16messageserver/MessageServer/pom.xml
+++ b/task16messageserver/MessageServer/pom.xml
@@ -14,6 +14,16 @@
         <maven.compiler.target>10</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.otus</groupId>
+            <artifactId>task16messageserver.mainserver</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../MainServer/target/ServerMain.jar</systemPath>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
