--- a/task16messageserver/DBServer/pom.xml
+++ b/task16messageserver/DBServer/pom.xml
@@ -56,6 +56,7 @@
     </dependencies>
 
     <build>
+        <finalName>dbserver</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
