--- a/task16messageserver/Frontend/pom.xml
+++ b/task16messageserver/Frontend/pom.xml
@@ -16,9 +16,36 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>ru.otus</groupId>
+            <artifactId>task16messageserver.mainserver</artifactId>
+            <version>1.0</version>
+        </dependency>
+<!--
+        <dependency>
+            <groupId>ru.otus</groupId>
+            <artifactId>task16messageserver.mainserver</artifactId>
+            <version>1.0</version>
+        </dependency>
+-->
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <finalName>frontend</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
