--- a/task16messageserver/DBServer/pom.xml
+++ b/task16messageserver/DBServer/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.otus</groupId>
-    <artifactId>task16messageserver.dbserver</artifactId>
+    <artifactId>dbserver</artifactId>
     <version>1.0</version>
 
 
@@ -16,6 +16,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>ru.otus</groupId>
+            <artifactId>task16messageserver.mainserver</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.freemarker</groupId>
